--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +21,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "nodemon": "^2.0.15"
   }
 }
