--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/ewldev/graphql-node#readme",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.2",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^15.3.0",
